[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sumnplot"
author = "Richard Angell"
author-email = "richardangell37@gmail.com"
home-page = "https://github.com/richardangell/sumnplot"
requires=[
    "numpy>=1.18.1",
    "pandas>=1.0.0",
    "scikit-learn>=1.0",
    "matplotlib>=3.1.3"
]
requires-python=">=3.7"
description-file="README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.flit.metadata.requires-extra]
test = [
    "pre-commit==2.19.0",
    "pytest==7.1.2"
]
doc = [
    "Sphinx==4.5.0",
    "sphinx-rtd-theme==1.0.0",
    "numpydoc==1.3.1",
]

[tool.flit.metadata.urls]
Documentation = "https://sumnplot.readthedocs.io/en/latest/"
PyPI = "https://pypi.org/project/sumnplot/"

[tool.flit.sdist]
exclude = [
    "demo",
    "docs",
]